--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "route-animation",
-  "version": "1.1.29",
+  "version": "1.1.30",
   "author": "SinGlEBW",
   "license": "MIT",
   "homepage": "https://github.com/SinGlEBW/route-animation#readme",
@@ -30,7 +30,8 @@
     "dev": "vite",
     "build": "tsc --p ./tsconfig-build.json && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "publish": "node publishVersion.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
