--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "@types/node": "^24.1.0",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.8",
@@ -57,6 +59,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "glob": "^10.3.10",
     "json": "^11.0.0",
+    "rc-lib-ui": "^1.0.27",
+    "react-redux": "^9.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
     "vite-plugin-dts": "^3.7.3",
