--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,13 @@
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+      "@lib": ["src/lib/index"],
+    }
   },
   "include": ["src", "src/lib"],
   "references": [{ "path": "./tsconfig.node.json" }]
