--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "tsc --p ./tsconfig-build.json && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "publish": "node publishVersion.js"
+    "send": "node publishVersion.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
